--- a/RegT2E.tex
+++ b/RegT2E.tex
@@ -1,18 +1,581 @@
-%%This is a very basic article template.
-%%There is just one section and two subsections.
-\documentclass{article}
 
-\begin{document}
+%%%%%%%%%%%%%%%%%%%%%%%%%
+% Dokumentinformationen %
+%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\titleinfo}{Regelungstechnik 2 - Formelsammlung}
+\newcommand{\authorinfo}{F. Braun, L. Schmid, U. Giger, R. Koller, S.
+Arnold, S. Ferretti}
+\newcommand{\versioninfo}{$Revision: 1044 $ - powered by \LaTeX}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Standard projektübergreifender Header für
+% - Makros 
+% - Farben
+% - Mathematische Operatoren 
+%
+% DORT NUR ERGÄNZEN, NICHTS LÖSCHEN
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
+\include{header}
+
+% Möglichst keine Ergänzungen hier, sondern in header.tex
+\begin{document} 
+ 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	
+\section{Gegenkopplung und Stabilität \formelbuch{107}}
+
+	
+
+	\subsection{LTI-Grundglieder}
+		\begin{longtable}{| c | c | c |}
+        	\specialrule{2pt}{0pt}{0pt}
+        	{\bf Typ} & {\it Symbol} & {\it Gleichung, Dgl}\\
+        	 & & {\it Sprungantwort}\\
+        	 & & {\it Frequenzgang, Betrag und Argument}\\ \cline{2-3}
+        	 & {\it Nyquistdiagramm} & {\it Bodediagramm}\\
+        	\specialrule{2pt}{0pt}{0pt}
+        	%P-Glied
+        	P &
+        	\begin{minipage}{3cm}
+	        \includegraphics[angle = {1.7},width=3cm]{./bilder/P_Glied.jpg}
+	        \end{minipage}
+			& \begin{minipage}{12cm}
+              	$y = Ku$\\
+              	$u=1(t)$ \hspace{17.5mm} $y=K 1(t)$\\
+              	$G(j \omega)=K$ \hspace{10mm} 
+              	$\left| G \right| = K$ \hspace{10mm}$argG=0$\\
+              \end{minipage} \rule[-2mm]{0mm}{13mm}
+			\\ \cline{2-3}
+			& \begin{minipage}{3cm}
+	        \includegraphics[width=3cm]{./bilder/P_Nyq.jpg}
+	        \end{minipage}
+			& \begin{minipage}{12cm}
+	        \includegraphics[angle = {0.3}, width=8cm]{./bilder/P_Bode.jpg}
+	        \end{minipage} \rule[-2mm]{0mm}{25mm}
+	        \\
+			\specialrule{2pt}{0pt}{0pt}
+			%I-Glied
+			I &
+			\begin{minipage}{3cm}
+	        \includegraphics[angle ={1.7},width=3cm]{./bilder/I_Glied.jpg}
+	        \end{minipage}
+			& \begin{minipage}{12cm}
+              	$\dot{y} = Ku$\\
+              	$u=1(t)$ \hspace{18.5mm} $y=K t$\\
+              	$G(j \omega)=\frac{K}{j\omega}$ \hspace{10mm} 
+              	$\left| G \right| = \frac{K}{\omega}$ \hspace{10mm}
+              	$argG=-\frac{\pi}{2}$\\
+              \end{minipage} \rule[-2mm]{0mm}{13mm}
+			\\ \cline{2-3}
+			& \begin{minipage}{3cm}
+	        \includegraphics[angle = {-0.5}, width=3cm]{./bilder/I_Nyq.jpg}
+	        \end{minipage}
+			& \begin{minipage}{12cm}
+	        \includegraphics[angle = {-0.8}, width=8cm]{./bilder/I_Bode.jpg}
+	        \end{minipage} \rule[-2mm]{0mm}{30mm}
+	        \\
+			\specialrule{2pt}{0pt}{0pt}
+			%D-Glied
+			D &
+			\begin{minipage}{3cm}
+	        \includegraphics[height=1cm]{./bilder/D_Glied2.png}      \\
+	        \includegraphics[angle ={1.7},width=3cm]{./bilder/D_Glied.jpg}
+	        \end{minipage}
+			& \begin{minipage}{12cm}
+              	$y = K\dot{u}$\\
+              	$u=1(t)$ \hspace{21.5mm} $y=K \delta (t)$\\
+              	$G(j \omega)=K j\omega$ \hspace{10mm} 
+              	$\left| G \right| = K\omega$ \hspace{10mm}
+              	$argG=\frac{\pi}{2}$\\
+              \end{minipage} \rule[-2mm]{0mm}{13mm}
+			\\ \cline{2-3}
+			& \begin{minipage}{3cm}
+	        \includegraphics[angle = {0}, width=3cm]{./bilder/D_Nyq.jpg}
+	        \end{minipage}
+			& \begin{minipage}{12cm}
+	        \includegraphics[angle = {0.5}, width=8cm]{./bilder/D_Bode.jpg}
+	        \end{minipage} \rule[-4mm]{0mm}{34mm}
+	        \\
+			\specialrule{2pt}{0pt}{0pt}
+\newpage
+			\specialrule{2pt}{0pt}{0pt}
+			%PT1_Glied
+			$PT_1$ &
+			\begin{minipage}{3cm}
+	        \includegraphics[width=3cm]{./bilder/PT1_Glied.jpg}
+	        \end{minipage}
+			& \begin{minipage}{12cm}
+              	$T\dot{y}+y=Ku$ \hspace{11.5mm} $y(0)=0$\\
+              	$u=1(t)$ \hspace{24mm} $y=K \left[ 1-e^{- \frac{t}{T}}\right]$\\
+              	$G(j \omega)= \frac{K}{1+j\omega T}$ \hspace{10mm} 
+              	$\left| G \right| = \frac{K}{\sqrt{1+(\omega T)^2}}$
+              	\hspace{20mm}
+              	$argG=-\arctan(\omega T)$\\
+              \end{minipage} \rule[-2mm]{0mm}{13mm}
+			\\ \cline{2-3}
+			& \begin{minipage}{3cm}
+	        \includegraphics[angle = {-0.5}, width=3cm]{./bilder/PT1_Nyq.jpg}
+	        \end{minipage}
+			& \begin{minipage}{12cm}
+	        \includegraphics[angle = {-0.6}, width=8cm]{./bilder/PT1_Bode.jpg}
+	        \end{minipage} \rule[-5mm]{0mm}{35mm}
+	        \\
+			\specialrule{2pt}{0pt}{0pt}
+			%PT2_Glied
+			$PT_2$ &
+			\begin{minipage}{3cm}
+	        \includegraphics[width=3cm]{./bilder/PT2_glied.jpg}
+	        \end{minipage}
+			& \begin{minipage}{12cm}
+              	$T^2\ddot{y}+2\zeta T \dot{y}+y=Ku \qquad \text{oder}
+              	\qquad	\ddot{y}+2\zeta\omega_n \dot{y}+\omega_n^2y=K\omega_n^2	u$\\ 
+              	$y(0)=0$ \hspace{10mm} $\dot{y}(0)=0$ \hspace{10mm}
+              	$\omega_n=\frac{1}{T}$\\
+              	$y=K \left[1-\frac{1}{\sqrt{1-\zeta^2}}e^{-\zeta\omega_n t}\sin
+              	\left( \sqrt{1-\zeta^2} \omega_n t+arcos(\zeta) \right)
+              	\right]$\\ 
+              	$G(j \omega)= \frac{K}{(j \omega T)^2 + 2 \zeta T (j\omega) + 1}$
+              	\hspace{10mm} 
+              	$\left| G \right| = \frac{K}{\sqrt{\left[1+(j\omega
+              	T)^2\right]^2+\left[2\zeta \omega T \right]^2}}$\\
+              	$\arg G=-\arctan  \frac{2\zeta \omega T}{(j\omega T)^2+1}$
+              	\hspace{13mm} $0 \leq\omega T \leq 1$\\
+              	$\arg G=\arctan \frac{2\zeta \omega T}{(j \omega T)^2+1}-\pi$
+              	\hspace{10mm} $1 \leq\omega T \leq \infty$\\
+              \end{minipage} \rule[-2mm]{0mm}{22mm}
+			\\ \cline{2-3}
+			& \begin{minipage}{3cm}
+	        \includegraphics[angle = {-0.3}, width=3cm]{./bilder/PT2_Nyq.jpg}
+	        \end{minipage}
+			& \begin{minipage}{12cm}
+	        \includegraphics[angle = {0.2}, width=8cm]{./bilder/PT2_Bode.jpg}
+	        \end{minipage} \rule[-5mm]{0mm}{35mm}
+	        \\
+			\specialrule{2pt}{0pt}{0pt}
+			%Tt_Glied
+			$T_t$ &
+			\begin{minipage}{3cm}
+	        \includegraphics[width=3cm]{./bilder/T_Glied.jpg}
+	        \end{minipage}
+			& \begin{minipage}{12cm}
+              	$y=\begin{cases}
+  				0 & 0<t<T_t \\
+  				u(t-T_t) & t \geq T_t
+				\end{cases}$\\
+              	$u=1(t)$ \hspace{29.5mm} $y=1(t-T_t)$\\
+              	$G(j \omega)= e^{-j\omega T_t}$ \hspace{15mm}
+              	$\left| G \right| = 1$
+              	\hspace{30mm}
+              	$argG=-\omega T_t$\\
+              \end{minipage} \rule[-2mm]{0mm}{15mm}
+			\\ \cline{2-3}
+			& \begin{minipage}{3cm}
+	        \includegraphics[angle = {0.2}, width=3cm]{./bilder/T_Nyq.jpg}
+	        \end{minipage}
+			& \begin{minipage}{12cm}
+	        \includegraphics[angle = {0.3}, width=8cm]{./bilder/T_Bode.jpg}
+	        \end{minipage} \rule[-5mm]{0mm}{35mm}
+	        \\
+			\specialrule{2pt}{0pt}{0pt}
+        \end{longtable}
+
+%----------------------------------------------------------------------------------------
+%
+%	Tabelle aus Buch Seite 124
+%
+%
+%	\subsection{Der Frequenzgang \formelbuch{117}}
+%		\begin{tabular}{| c | c | c | c |}
+%		    \hline
+%	        $P$-Glied & $I$-Glied & $PT_1$-Glied & $T_t$-Glied \\
+%	        \begin{minipage}{3cm}
+%	        \includegraphics[width=3cm]{./bilder/pglied}
+%	        \end{minipage} &
+%			\begin{minipage}{3cm}
+%	        \includegraphics[width=3cm]{./bilder/iglied}
+%	        \end{minipage} &
+%			\begin{minipage}{4cm}
+%	        \includegraphics[width=3cm]{./bilder/pt1glied}
+%	        \end{minipage} &
+%			\begin{minipage}{3cm}
+%	        \includegraphics[width=3cm]{./bilder/tglied}
+%	        \end{minipage} \\
+%	        \hline
+%	        $y=Ku$ & $\dot{y} = Ku$ & $T\dot{y}+y = Ku$ & $y=u(t-T_t)$ \\
+%	        &  &  & $t\geq T_t$ \\
+%	        \hline
+%	        $G(j\omega)=K$ & $G(j\omega)= \frac{K}{j\omega}$ &
+%	        $G(j\omega)=\frac{K}{1+j\omega T}$ &
+%	        $G(j\omega)=e^{-j\omega T_t}$\\
+%	        & & & \\
+%	        \hline
+%	        $\left| G \right| = K$ & $\left| G \right| = \frac{K}{\omega}$ &
+%	        $\left| G \right| = \frac{K}{\sqrt{1+(|\omega T)^2}}$ &
+%	        $\left| G \right| = 1$ \\
+%	        $argG=0$ & $argG= -\frac{\pi}{2}$ & $argG=-\arctan(\omega T)$ &
+%	        $argG= - \omega T_t$\\
+%	        & & &  \\
+%	        \hline
+%	        & & & \\
+%	        \begin{minipage}{3cm}
+%	        \includegraphics[width=2.7cm]{./bilder/fg_pglied}
+%	        \end{minipage} &
+%			\begin{minipage}{3cm}
+%	        \includegraphics[width=3cm]{./bilder/fg_iglied}
+%	        \end{minipage} &
+%			\begin{minipage}{4cm}
+%	        \includegraphics[width=4cm]{./bilder/fg_pt1glied}
+%	        \end{minipage} &
+%			\begin{minipage}{3cm}
+%	        \includegraphics[width=3cm]{./bilder/fg_tglied}
+%	        \end{minipage} \\
+%			& & & \\
+%	        \hline
+%	        \end{tabular}
+
+%----------------------------------------------------------------------------------------
+
+	\subsection{Stabilitätsproblem \formelbuch{108}}
+		\begin{minipage}{5cm}
+		\fbox{$K_I T_t=\frac{\pi}{2}$} \\
+		\fbox{$K_I=\omega_\pi$}
+		\end{minipage}
+		\begin{minipage}{13cm}
+        $K_I$: Stabilitätsgrenze \\
+        $\omega_\pi$: Phasenschnittfrequenz
+        \end{minipage}
 
 
-\section{Title}
+	\subsection{Nyquistkriterium \formelbuch{129}}
+		Der geschlossene Regelkreis ist genau dann stabil, wenn beim Durchlauf der
+		Ortskurve in Richtung zunehmender Frequenz der kritische Punkt -1 \glqq zur
+		Linken\grqq\ liegt.
+		
+	\subsection{Phasenreserve und Verstärkungsreserve \formelbuch{132}}
+			\begin{minipage}{3.5cm}
+			\fbox{$K_R K_{Rres}=K_{R\pi}$}\\
+			\fbox{$K_{Rres}=\frac{1}{\left| G(j\omega_{\pi})\right|}$}\\
+			\fbox{$argG_0=-\pi+\Phi_{res}$}\\
+			\fbox{$argG_0(\omega_\pi)=-\pi$}\\
+			\fbox{$|G_0(j\omega_D)|=1$}\\
+			$K_R < K_{R\pi}$\\
+			$K_R > K_{R\pi}$	
+			\end{minipage}
+			\begin{minipage}{9cm}
+        	$K_R$: \hspace{5mm}Verstärkung des Reglers \\
+        	$K_{Rres}$: Verstärkungsreserve mit Regler (Amplitudenres., gain
+        	margin)\\ $K_{R\pi}$: kritische Verstärkung (Verstärkung ohne
+        	Regler)\\ $\omega_\pi$: Phasenschnittfrequenz \\
+        	$\omega_D$: Durchtrittsfrequenz \\
+        	$\Phi_{res}$: Phasenreserve \\ \\ \\
+        	Regelung stabil\\
+        	Regelung instabil
+        	\end{minipage}
+			\begin{minipage}{6.2cm}
+        		\includegraphics[width=6.2cm]{./bilder/phasenreserve.png}
+        	\end{minipage}
+			
+	\subsection{Sprungantwort und Stabilität \formelbuch{135}}
+		\subsubsection{Stabilitätssatz für ein System 2. Ordnung \formelbuch{137}}
+			Ein System ist genau dann stabil, wenn {\bf alle} Koeffizienten der
+			homogenen Dgl. positiv (oder alle negativ) und ungleich 0 sind.\\
+			$\ddot{y}+a_1\dot{y}+a_0y=F(u)$
+			
+		\subsubsection{Stabilitätssatz für die Sprungantwort}
+			Ein LTI-System ist genau dann stabil, wenn die Sprungantwort einem
+			konstantem Wert zustrebt.
+			
+\section{PID-Regler \formelbuch{147}}
 
-\subsection{Subtitle}
+	\subsection{P-Regler - Stationärer Zustand \formelbuch{155}}
+		Beim einfachsten linearen Regler, dem P-Typ, besteht ein proportionaler
+		Zusammenhang zwischen Fehler $e$ und Stellgrösse $u$.\\
+		Der P-Regler reagiert schnell, kann aber den Sprungfehler nicht vollständig
+		eliminieren. Er hat einen stationären Fehler.
+		
+	
+	\subsection{I-Regler \formelbuch{160}}
+		Der reine I-Regler ist allgemein ungünstig, weil er relativ langsam arbeitet
+		und die Stabilität schwacht. Ist aber die Regelstrecke nur erster Ordnung
+		erziehlt man gute Ergebnisse mit dem I-Regler.\\
+		Der I-Regler neigt zum Schwingen.\\
+		Bei sprungförmigen Signalen, d.h. für Festwertregelungen hat der I-Regler
+		keinen Fehler!
+		
+	
+	\subsection{$PT_2$-Glied \formelbuch{163}}
+		\begin{minipage}{5cm}
+        \fbox{$T_\omega = 2T_m=\frac{2\pi}{\omega_n \sqrt{1-\zeta
+        ^2}}=\frac{2\pi}{\omega}$}\\
+        \fbox{$\omega = \frac{2\pi}{T_\omega}=2\pi f$}
+        \end{minipage}
+		\begin{minipage}{13cm}
+        $T_\omega$: Schwingungsdauer\\
+        $\omega_n$: Kennkreisfrequenz\\
+        $\zeta$: \hspace{1.1mm} Dämpfungskonstante\\
+        \end{minipage}\\
+		\glqq Optimale Dämpfung\grqq\ bei $\Psi=45$ und $\zeta=\frac{1}{\sqrt{2}}$.
+		Dabei erreicht die Regelgrösse $y$ nach $4.3\%$ Überschwingen rasch den
+		Endwert.\\
+		\begin{minipage}{7cm}
+		$T^2\ddot{y}+2\zeta T \dot{y}+ y=Ku$\\
+		$\ddot{y}+2\zeta\omega_n\dot{y}+\omega_n^2=\omega_n^2 Ku$
+		\end{minipage}
+		\begin{minipage}{11cm}
+        $\ddot{y}+a_1\dot{y}+a_0 y=\ldots$\\
+        $a_1=2\zeta\omega_n$\\
+        $a_0=\omega_n^2$
+        \end{minipage}
+	
+	\subsection{PI-Regler \formelbuch{174}}
+		\begin{minipage}{15cm}
+        \includegraphics[angle={0},width=10cm]{./bilder/PI_Regler.jpg}
+        \end{minipage}\\ \\
+		\begin{minipage}{15cm}
+        \fbox{$G(j\omega)=K_R \frac{1+j\omega T_N}{j\omega T_N}$}\qquad
+        \fbox{$arg(G(j\omega))=\arctan(\omega T_N)-\frac{\pi}{2}$}
+        \end{minipage}
+		
+	
+	\subsection{D-Glied \formelbuch{179}}
+		Der Differenzierer erzeugt eis Korrektursignal im voraus.\\
+		Nachteilig ist, wenn die Regelgrösse verrauscht ist, dann werden die
+		hochfrequenten Störsignale durch die Ableitung verstärkt.\\
+		Ein LTI-System, welches ohne D-Glied darstellbar ist, gegebenenfalls durch
+		Umformung des Blockdiagramms, heisst realisierbar.
+	
+	
+	\subsection{PID-Regler \formelbuch{183} \formelbuch{383}}
+	\fbox{$G(s) = K_R(1 + \frac{1}{j \omega T_N} + j \omega T_V )$}
+	
+	\subsection{PD-Regler \formelbuch{187} \formelbuch{383}}
+	\fbox{$u=K_R at+K_R T_V a$} \qquad
+	Das PD-Glied entspricht dem inversen PT$_1$-Glied.
+	
+	\subsection{Empirische Einstellregeln \formelbuch{188}}
+		\includegraphics[width=13cm]{./bilder/Empirisch_Regeln.jpg}
+		\begin{minipage}[b]{5cm}
+        UTF des angenäherten Modells:\\ \\
+		$G_0(j\omega)=\frac{K_s}{1+j\omega T_g}e^{-j\omega T_u}$
+		\vspace{2.7cm}
+		\end{minipage}\\
+		\includegraphics[width=13cm]{./bilder/CHR_Einst.jpg}
+		\begin{minipage}[b]{5cm}
+        $y_m$: \"Uberschwingen
+        \vspace{4cm}
+        \end{minipage}\\
+		Reglereinstellung nach Chien-Hrones-Reswick\\
+		\includegraphics[width=13cm]{./bilder/ZN_Einst.jpg}\\
+		Reglereinstellung nach Ziegler-Nichols
+		
+	\subsection{Wind-Up \formelbuch{200}}
+		Die Folge eines \glqq wind-up-Phänomens\grqq\ ist einerseits ein konstanter
+		Fehler und anderseits eine verzögert reagierende und damit stark überschwingende
+		Regelgrösse.\\ \\
+		\underline{wind-up entsteht durch:}\\
+		\begin{itemize}
+		\item bestehender Fehler
+		\item I-Anteil im Regler
+		\item Sättigung der Stellgrösse
+		\end{itemize}
+		
+	
+\section{Diverses}
+	\subsection{Frequenzgang zweier Systeme mit Rückkopplung }
+			\begin{center}
+        		\includegraphics[height=3cm]{./bilder/feedback.png}
+        	\end{center}
 
-Plain text.
-
-\subsection{Another subtitle}
-
-More plain text.
+	\subsection{Graphisch Phasen-/Verstärkungsreserve}
+		\parbox{7cm}{
+		\includegraphics[width=7cm]{./bilder/bode-stabilitaet.png}
+		}\\
+		Phasen-/Verstärkungsreserve = Phasen-/Amplitudenrand
+		
+		
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
+	\subsection{Approximation des Bode-Diagramms}
+	\renewcommand{\arraystretch}{1.5}
+	\begin{tabular}{|p{4cm}|p{1.2cm}p{5cm}|p{1.2cm}p{4.5cm}|}
+	\hline
+	\textbf{UTF $H(s)$}
+		& \textbf{Amplitude $|H(s)|$}
+		&
+		& \textbf{Phase $ \angle(H(s))$}
+		& \\
+	\hline
+	\hline
+	1) Konstanter Faktor & & & & \\
+		$\alpha e^{j \beta}$
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-konst.png}
+		} 
+		& Konst. $20 \log \alpha$
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-konst.png}
+		} 
+		& Konst. $\beta$ \\
+	\hline
+	2) Pol im Ursprung & & & &\\
+		$\frac{\alpha}{s}$
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-ampl-tp-ord1.png}
+		} 
+		& \parbox{5cm}{
+			Lin. Steigung $-20 db/Dek.$\\
+			$0dB$ bei $\omega = \alpha$
+		}
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-konst.png}
+		} 
+		& Konst. $-\frac{\pi}{2}$ \\
+	\hline
+	3) Nullstelle im Ursprung & & & &\\
+		$\alpha s$
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-ampl-hp-ord1.png}
+		} 
+		& \parbox{5cm}{
+			Lin. Steigung $+20 db/Dek.$\\
+			$0dB$ bei $\omega = \frac{1}{\alpha}$
+		}
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-konst.png}
+		} 
+		& Konst. $+\frac{\pi}{2}$ \\
+	\hline
+	4a) Reeller Pol & & & &\\
+		$\frac{1}{s + \alpha}$
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-ampl-4.png}
+		} 
+		& \parbox{5cm}{
+			Konst. $-20 \log \alpha$ für $\omega < \alpha$\\
+			dann Steigung $-20dB/Dek.$ 
+		}
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-phase-4.png}
+		} 
+		& \parbox{4.5cm}{
+			Konst. $0$ für $\omega < \frac{\alpha}{10} $\\
+			Konst. $-\frac{\pi}{2}$ für $\omega > 10 \alpha$
+		}\\
+	\hline
+	4b) Reeller Pol &&&&\\
+		$\frac{\alpha}{s + \alpha}$
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-ampl-4.png}
+		} 
+		& \parbox{5cm}{
+			Konst. $0dB$ für $\omega < \alpha$\\
+			dann Steigung $-20dB/Dek.$
+		}
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-phase-4.png}
+		} 
+		& \parbox{4.5cm}{
+			Konst. $0$ für $\omega < \frac{\alpha}{10} $\\
+			Konst. $-\frac{\pi}{2}$ für $\omega > 10 \alpha$
+		}\\
+	\hline
+	5a) Reelle Nullstelle &&&& \\
+		$s + \alpha$
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-ampl-5.png}
+		} 
+		& \parbox{5cm}{
+			Konst. $20 \log \alpha$ für $\omega < \alpha$\\
+			dann Steigung $+20dB/Dek.$
+		}
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-phase-5.png}
+		} 
+		& \parbox{4.5cm}{
+			Konst. $0$ für $\omega < \frac{\alpha}{10} $\\
+			Konst. $+\frac{\pi}{2}$ für $\omega > 10 \alpha$
+		}\\
+	\hline
+	5b) Reelle Nullstelle &&&& \\
+		$\frac{s + \alpha}{\alpha}$
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-ampl-5.png}
+		} 
+		& \parbox{5cm}{
+			Konst. $0dB$ für $\omega < \alpha$\\
+			dann Steigung $+20dB/Dek.$
+		}
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-phase-5.png}
+		} 
+		& \parbox{4.5cm}{
+			Konst. $0$ für $\omega < \frac{\alpha}{10} $\\
+			Konst. $+\frac{\pi}{2}$ für $\omega > 10 \alpha$
+		}\\
+	\hline
+	\multicolumn{2}{|l}{6a) Konjugiert-komplexe Pole} &&& \\
+		$\frac{1}{s^2+s\frac{\omega_p}{q_p}+\omega_p^2}$
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-ampl-6.png}
+		} 
+		& \parbox{5cm}{
+			Konst. $-40 \log \omega_p$ für $\omega < \omega_p$\\
+			dann Steigung $-40dB/Dek.$ für $\omega > \omega_p; -40 \log \omega_p$\\
+			Überhöhung zwischen $\frac{\omega_p}{2}$, $\omega_p$ \& $2 \omega_p$\\
+			Max. $20 \log \frac{q_p}{\omega_p^2}$ bei $\omega = \omega_p$
+			}
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-phase-6.png}
+		} 
+		& \parbox{4.5cm}{
+			Konst. $0$ für $\omega < \frac{\omega_p}{10^{\frac{1}{2q_p}}} $\\
+			Konst. $-\pi$ für $\omega > \omega_p 10^{\frac{1}{2q_p}}$\\
+			$-\frac{\pi}{2}$ bei $\omega = \omega_p$
+		}\\
+	\hline
+	\multicolumn{2}{|l}{6b) Konjugiert-komplexe Pole} &&& \\
+		$\frac{\omega_p^2}{s^2+s\frac{\omega_p}{q_p}+\omega_p^2}$
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-ampl-6.png}
+		} 
+		& \parbox{5cm}{
+			Konst. $0dB$ für $\omega < \omega_p$\\
+			dann Steigung $-40dB/Dek.$ für $\omega > \omega_p; 0dB$\\
+			Überhöhung zwischen $\frac{\omega_p}{2}$, $\omega_p$ \& $2 \omega_p$,
+			Max. $20 \log q_p$ bei $\omega = \omega_p$
+			}
+		& \parbox{1cm}{
+			\includegraphics[width=1cm]{./bilder/bode-approx-phase-6.png}
+		} 
+		& \parbox{4.5cm}{
+			Konst. $0$ für $\omega < \frac{\omega_p}{10^{\frac{1}{2q_p}}} $\\
+			Konst. $-\pi$ für $\omega > \omega_p 10^{\frac{1}{2q_p}}$\\
+			Bei $\omega = \omega_p$ genau $-\frac{\pi}{2}$
+		}\\
+	\hline
+	\multicolumn{2}{|l}{7) Konjugiert-komplexe Nullstellen} &&& \\
+		\parbox{4cm}{
+			$s^2+s\frac{\omega_z}{q_z}+\omega_z^2$ \\ bzw. \\
+			$\frac{s^2+s\frac{\omega_z}{q_z}+\omega_z^2}{\omega_z^2}$
+		}
+		& \multicolumn{2}{|l|}{
+			\parbox{6.2cm}{
+			Analog zu 6a, 6b (jedoch Spiegelung an der 0dB-Linie)}
+		}
+		
+		& \multicolumn{2}{|l|}{
+			\parbox{6.2cm}{Analog zu 6a, 6b (jedoch Spiegelung an der 0 Grad-Linie)}
+		}\\
+	\hline
+	\multicolumn{5}{|l|}{
+		\parbox{18cm}{
+		8) Serieschaltung von Systemen erfolgt durch \textbf{Superposition} der
+		einzelnen Bode-Diagramme (Multiplikation von UTFs entspricht Addition im
+		dB-Bereich). } } \\
+	\hline
+	\end{tabular}
+	\renewcommand{\arraystretch}{1}
 
 \end{document}
