Kleine Verbesserungen in den Tabellen

--- a/sections/Diverses.tex
+++ b/sections/Diverses.tex
@@ -5,9 +5,7 @@
         	\end{center}
 
 	\subsection{Graphisch Phasen-/Verstärkungsreserve}
-		\parbox{7cm}{
-		\includegraphics[width=7cm]{./bilder/bode-stabilitaet.png}
-		}\\
+		\includegraphics[width=7cm]{./bilder/bode-stabilitaet.png} \\
 		Phasen-/Verstärkungsreserve = Phasen-/Amplitudenrand
 		
 		
@@ -176,20 +174,18 @@
 			$s^2+s\frac{\omega_z}{q_z}+\omega_z^2$ \\ bzw. \\
 			$\frac{s^2+s\frac{\omega_z}{q_z}+\omega_z^2}{\omega_z^2}$
 		}
-		& \multicolumn{2}{|l|}{
-			\parbox{6.2cm}{
-			Analog zu 6a, 6b (jedoch Spiegelung an der 0dB-Linie)}
+		& \multicolumn{2}{|p{6.2cm}|}{
+			Analog zu 6a, 6b (jedoch Spiegelung an der 0dB-Linie)
 		}
 		
-		& \multicolumn{2}{|l|}{
-			\parbox{6.2cm}{Analog zu 6a, 6b (jedoch Spiegelung an der 0 Grad-Linie)}
+		& \multicolumn{2}{|p{6.2cm}|}{
+			Analog zu 6a, 6b (jedoch Spiegelung an der 0 Grad-Linie)
 		}\\
 	\hline
-	\multicolumn{5}{|l|}{
-		\parbox{18cm}{
+	\multicolumn{5}{|p{18cm}|}{
 		8) Serieschaltung von Systemen erfolgt durch \textbf{Superposition} der
 		einzelnen Bode-Diagramme (Multiplikation von UTFs entspricht Addition im
-		dB-Bereich). } } \\
+		dB-Bereich). } \\
 	\hline
 	\end{tabular}
 	\renewcommand{\arraystretch}{1}
