Header als Submodul

--- a/RegT2E.tex
+++ b/RegT2E.tex
@@ -14,7 +14,10 @@
 %
 % DORT NUR ERGÄNZEN, NICHTS LÖSCHEN
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-\include{header}
+\include{header/header}
+
+\usepackage{booktabs}
+\usepackage{longtable}
 
 % Möglichst keine Ergänzungen hier, sondern in header.tex
 \begin{document} 
