Erster Anlauf einer Überarbeitung:
 - Bilder der Grundglieder mit TikZ (noch nicht alle in Verwendung)
 - Tabellen in "Empirische Einstellregeln" in LaTex

--- a/RegT2E.tex
+++ b/RegT2E.tex
@@ -18,6 +18,7 @@
 
 \usepackage{booktabs}
 \usepackage{longtable}
+\usepackage{tikz}
 
 % Möglichst keine Ergänzungen hier, sondern in header.tex
 \begin{document} 
