Überarbeitung Tabelle LTI-Grundglieder

--- a/sections/GegenkopplungStabilitaet.tex
+++ b/sections/GegenkopplungStabilitaet.tex
@@ -1,5 +1,5 @@
 \section{Gegenkopplung und Stabilität \formelbuch{107}}
-	\subsection{LTI-Grundglieder}
+	\subsection{LTI-Grundglieder}	
 		\begin{longtable}{|c|c|c|}
         	\specialrule{2pt}{0pt}{0pt}
         	{\bf Typ} & {\it Symbol} & {\it Gleichung, Dgl}\\
@@ -17,12 +17,10 @@
               	$\left| G \right| = K$ \hspace{10mm}$argG=0$\\
               \end{minipage} \rule[-2mm]{0mm}{13mm}
 			\\ \cline{2-3}
-			& \begin{minipage}{3cm}
-	        \includegraphics[width=3cm]{./bilder/P_Nyq.jpg}
-	        \end{minipage}
-			& \begin{minipage}{12cm}
-	        \includegraphics[angle = {0.3}, width=8cm]{./bilder/P_Bode.jpg}
-	        \end{minipage} \rule[-2mm]{0mm}{25mm}
+			& 
+			\parbox[c]{3cm}{\input{./tikzBilder/PGliedNyquist}}
+			&
+			\parbox[c]{4.5cm}{\input{./tikzBilder/PGliedBode}}
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
 			%I-Glied
