--- a/sections/GegenkopplungStabilitaet.tex
+++ b/sections/GegenkopplungStabilitaet.tex
@@ -20,7 +20,7 @@
 			& 
 			\parbox[c]{3cm}{\input{./tikzBilder/PGliedNyquist}}
 			&
-			\parbox[c]{4.5cm}{\input{./tikzBilder/PGliedBode}}
+			\parbox[c]{6cm}{\input{./tikzBilder/PGliedBode}}
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
 			%I-Glied
@@ -34,12 +34,10 @@
               	$argG=-\frac{\pi}{2}$\\
               \end{minipage} \rule[-2mm]{0mm}{13mm}
 			\\ \cline{2-3}
-			& \begin{minipage}{3cm}
-	        \includegraphics[angle = {-0.5}, width=3cm]{./bilder/I_Nyq.jpg}
-	        \end{minipage}
-			& \begin{minipage}{12cm}
-	        \includegraphics[angle = {-0.8}, width=8cm]{./bilder/I_Bode.jpg}
-	        \end{minipage} \rule[-2mm]{0mm}{30mm}
+			& 
+			\parbox[c]{3cm}{\input{./tikzBilder/IGliedNyquist}}
+			& 
+			\parbox[c]{6cm}{\input{./tikzBilder/IGliedBode}}
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
 			%D-Glied
@@ -56,9 +54,10 @@
               	$argG=\frac{\pi}{2}$\\
               \end{minipage} \rule[-2mm]{0mm}{13mm}
 			\\ \cline{2-3}
-			& \begin{minipage}{3cm}
-	        \includegraphics[angle = {0}, width=3cm]{./bilder/D_Nyq.jpg}
-	        \end{minipage}
+			& 
+% 			\begin{minipage}{3cm}
+% 	        \includegraphics[angle = {0}, width=3cm]{./bilder/D_Nyq.jpg}
+% 	        \end{minipage}
 			& \begin{minipage}{12cm}
 	        \includegraphics[angle = {0.5}, width=8cm]{./bilder/D_Bode.jpg}
 	        \end{minipage} \rule[-4mm]{0mm}{34mm}
