--- a/tikzBilder/PGliedNyquist.tex
+++ b/tikzBilder/PGliedNyquist.tex
@@ -4,5 +4,5 @@
 \draw[->, thick] (0,-0.3) -- (0,1) node[left] {Im};
 \node[rounded rectangle, draw=blue, thick]  at (1,0) {};
 \node at (1,0.4) {K};
-%\node at (0.8,-0.8) {frequenzunabhängig};
+\node at (0.8,-0.8) {\small{frequenzunabhängig}};
 \end{tikzpicture}
