--- a/tikzBilder/IGliedBode.tex
+++ b/tikzBilder/IGliedBode.tex
@@ -12,7 +12,7 @@
 	%%%%%%%%%%%%%%%%
 
 	%% Amplitudengang
-	\draw[blue, very thick] (0,0.3) -- +(3.3,-1.55) node[near end, below, sloped, black] {$-20\frac{dB}{DK}$};
+	\draw[blue, very thick] (0,0.3) -- +(3.3,-1.55) node[near end, below, rotate=-18, black] {$-20\frac{dB}{DK}$};
 \end{scope}
 
 
