--- a/tikzBilder/PGliedBode.tex
+++ b/tikzBilder/PGliedBode.tex
@@ -13,7 +13,7 @@
 
 	%% Amplitudengang
 	\draw[blue, very thick] (0,-0.3) -- +(3.3,0);
-	\draw[<-, very thick] (1.3,-0.2) -- +(0.5,0.6) node[right] {$K<1$};
+	\draw[<-, thick] (1.3,-0.2) -- +(0.5,0.6) node[right] {$K<1$};
 \end{scope}
 
 
