--- a/RegT2E.tex
+++ b/RegT2E.tex
@@ -1,4 +1,3 @@
-
 %%%%%%%%%%%%%%%%%%%%%%%%%
 % Dokumentinformationen %
 %%%%%%%%%%%%%%%%%%%%%%%%%
@@ -13,8 +12,10 @@
 % - Mathematische Operatoren 
 %
 % DORT NUR ERGÄNZEN, NICHTS LÖSCHEN
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 \include{header/header}
+\include{header/lizenzen}
+\lizenz{cc-by-nc-sa}{small}
 
 \usepackage{booktabs}
 \usepackage{longtable}
