--- a/sections/GegenkopplungStabilitaet.tex
+++ b/sections/GegenkopplungStabilitaet.tex
@@ -16,8 +16,10 @@
 				$G(j \omega)=K$	& $\left| G \right| = K$	& $argG=0$ \\
 			\end{tabular} 
 			\\ \cline{2-3}
-			& \parbox[c]{3cm}{\input{./tikzBilder/PGliedNyquist}}
-			& \parbox[c]{6cm}{\input{./tikzBilder/PGliedBode}}
+			& 
+			& 
+			\parbox[c]{3cm}{\input{./tikzBilder/PGliedNyquist}} \quad
+			\parbox[c]{6cm}{\input{./tikzBilder/PGliedBode}}			 
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
 			%I-Glied
@@ -29,8 +31,10 @@
 				$G(j \omega)=\frac{K}{j\omega}$ & $\left| G \right| = \frac{K}{\omega}$ & $argG=-\frac{\pi}{2}$ \\
 			\end{tabular}
 			\\ \cline{2-3}
-			& \parbox[c]{3cm}{\input{./tikzBilder/IGliedNyquist}}
-			& \parbox[c]{6cm}{\input{./tikzBilder/IGliedBode}}
+			& 
+			&
+			\parbox[c]{3cm}{\input{./tikzBilder/IGliedNyquist}}
+			\parbox[c]{6cm}{\input{./tikzBilder/IGliedBode}} \quad
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
 			%D-Glied
@@ -48,9 +52,9 @@
               \end{minipage} \rule[-2mm]{0mm}{13mm}
 			\\ \cline{2-3}
 			& 
-% 			\begin{minipage}{3cm}
-% 	        \includegraphics[angle = {0}, width=3cm]{./bilder/D_Nyq.jpg}
-% 	        \end{minipage}
+			\begin{minipage}{3cm}
+	        \includegraphics[angle = {0}, width=3cm]{./bilder/D_Nyq.jpg}
+	        \end{minipage}
 			& \begin{minipage}{12cm}
 	        \includegraphics[angle = {0.5}, width=8cm]{./bilder/D_Bode.jpg}
 	        \end{minipage} \rule[-4mm]{0mm}{34mm}
