LTI-Grundglieder: D-Glied überarbeitet.
Einige andere kleine Änderungen

--- a/sections/PidRegler.tex
+++ b/sections/PidRegler.tex
@@ -91,7 +91,7 @@
 		    < 3 \rightarrow \text{Strecke schlecht regelbar}
 		  \end{cases}
 		  $
-		} & & 
+		} & $q=\frac{T_g}{T_uK_s}$ & $K_{R\pi} \qquad T_\pi=\frac{2\pi}{\omega_\pi}$
 		\\ \hline
 		\textbf{Regler} & \textbf{Regler\-parameter} &
 		\multicolumn{2}{|p{3.5cm}|}{\textbf{Führungsverhalten} \newline $y_m$:
