--- a/sections/GegenkopplungStabilitaet.tex
+++ b/sections/GegenkopplungStabilitaet.tex
@@ -5,8 +5,10 @@
         	{\bf Typ} & {\it Symbol} & {\it Gleichung, Dgl}\\
         	 & & {\it Sprungantwort}\\
         	 & & {\it Frequenzgang, Betrag und Argument}\\ \cline{2-3}
-        	 & {\it Nyquistdiagramm} & {\it Bodediagramm}\\
+        	 & & {\it Nyquistdiagramm} -- {\it Bodediagramm}\\
         	\specialrule{2pt}{0pt}{0pt}
+        	
+        	
         	%P-Glied
         	P & \parbox[c][2cm]{3cm}{\input{./tikzBilder/PGlied}}
 			&
@@ -22,6 +24,8 @@
 			\parbox[c]{6cm}{\input{./tikzBilder/PGliedBode}}			 
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
+			
+			
 			%I-Glied
 			I & \parbox[c][2cm]{3cm}{\input{./tikzBilder/IGlied}}
 			&
@@ -34,32 +38,28 @@
 			& 
 			&
 			\parbox[c]{3cm}{\input{./tikzBilder/IGliedNyquist}}
-			\parbox[c]{6cm}{\input{./tikzBilder/IGliedBode}} \quad
+			\parbox[c]{6cm}{\input{./tikzBilder/IGliedBode}} 
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
+			
+			
 			%D-Glied
-			D &
-			\begin{minipage}{3cm}
-	        \includegraphics[height=1cm]{./bilder/D_Glied2.png}      \\
-	        \includegraphics[angle ={1.7},width=3cm]{./bilder/D_Glied.jpg}
-	        \end{minipage}
-			& \begin{minipage}{12cm}
-              	$y = K\dot{u}$\\
-              	$u=1(t)$ \hspace{21.5mm} $y=K \delta (t)$\\
-              	$G(j \omega)=K j\omega$ \hspace{10mm} 
-              	$\left| G \right| = K\omega$ \hspace{10mm}
-              	$argG=\frac{\pi}{2}$\\
-              \end{minipage} \rule[-2mm]{0mm}{13mm}
+			D & \parbox[c][2cm]{3cm}{\input{./tikzBilder/DGlied}}
+			&
+			\begin{tabular}{lll}
+				$y = K\dot{u}$					&										& \\
+				$u=1(t)$						& $y=K \delta (t)$						& \\
+				$G(j \omega)=K j\omega$			& $\left| G \right| = K\omega$			& $argG=\frac{\pi}{2}$
+			\end{tabular}
 			\\ \cline{2-3}
-			& 
-			\begin{minipage}{3cm}
-	        \includegraphics[angle = {0}, width=3cm]{./bilder/D_Nyq.jpg}
-	        \end{minipage}
-			& \begin{minipage}{12cm}
-	        \includegraphics[angle = {0.5}, width=8cm]{./bilder/D_Bode.jpg}
-	        \end{minipage} \rule[-4mm]{0mm}{34mm}
+			&			
+			&
+			\parbox[c]{3cm}{\input{./tikzBilder/DGliedNyquist}}
+			\parbox[c]{6cm}{\input{./tikzBilder/DGliedBode}} 
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
+			
+			
 			%PT1_Glied
 			$PT_1$ &
 			\parbox[c][2cm]{3cm}{\input{./tikzBilder/PT1Glied}}
@@ -80,6 +80,8 @@
 	        \end{minipage} \rule[-5mm]{0mm}{35mm}
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
+			
+			
 			%PT2_Glied
 			$PT_2$ &
 			\begin{minipage}{3cm}
@@ -112,6 +114,8 @@
 	        \end{minipage} \rule[-5mm]{0mm}{35mm}
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
+			
+			
 			%Tt_Glied
 			$T_t$ &
 	        \parbox[c][2cm]{3cm}{\input{./tikzBilder/TtGlied}}
