--- a/sections/PidRegler.tex
+++ b/sections/PidRegler.tex
@@ -9,7 +9,7 @@
 	
 	\subsection{I-Regler \formelbuch{160}}
 		Der reine I-Regler ist allgemein ungünstig, weil er relativ langsam arbeitet
-		und die Stabilität schwacht. Ist aber die Regelstrecke nur erster Ordnung
+		und die Stabilität schwächt. Ist aber die Regelstrecke nur erster Ordnung
 		erziehlt man gute Ergebnisse mit dem I-Regler.\\
 		Der I-Regler neigt zum Schwingen.\\
 		Bei sprungförmigen Signalen, d.h. für Festwertregelungen hat der I-Regler
