Bode-Approximations-Super-Tabelle ueberarbeitet.

--- a/RegT2E.tex
+++ b/RegT2E.tex
@@ -27,6 +27,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{sections/GegenkopplungStabilitaet}
 \input{sections/PidRegler}
-\input{sections/Diverses}		
+\input{sections/Diverses}
+
+\input{sections/BodeApproximation}	
 
 \end{document}
