Kaptiel Umformungen hinzugefügt
Systeme mit Rückkopplung von Diverses plus drei andere Beispiele haben
nun ihr eigenes Kapitel gefunden.

--- a/RegT2E.tex
+++ b/RegT2E.tex
@@ -28,7 +28,7 @@
 \input{sections/GegenkopplungStabilitaet}
 \input{sections/PidRegler}
 \input{sections/Diverses}
-
 \input{sections/BodeApproximation}	
+\input{sections/Umformungen.tex}
 
 \end{document}
