--- a/tikzBilder/SystemParallel.tex
+++ b/tikzBilder/SystemParallel.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}
   \node (in) at (0,1) []{u};
-  \node (dot) at (1,1) [circle,draw]{};
+  \node (dot) at (1,1) [draw,circle,inner sep=1,fill]{};
 
   \node (G1) at (3,2) [draw]{$G_1(s)$};
   \node (G2) at (3,0) [draw]{$G_2(s)$};
@@ -9,7 +9,7 @@
   \node (out) at (6,1) []{y};
 
 
-  \draw[->] (in) -> (dot);
+  \draw (in) -> (dot);
  
   \draw[->] (dot) |-  (G1);
   \draw[->] (G1) -| (sum);
@@ -20,3 +20,4 @@
   \draw[->](sum) -- (out);
 
 \end{tikzpicture}
+
