--- a/sections/PidRegler.tex
+++ b/sections/PidRegler.tex
@@ -35,7 +35,7 @@
 		Weitere Formeln in der LTI-Grundglieder Tabelle
 	
 	\subsection{PI-Regler \formelbuch{174}}
-		\includegraphics[width=10cm]{./bilder/PI_Regler.jpg} \\
+		\includegraphics[width=10cm]{./images/PI_Regler.jpg} \\
 		\fbox{$G(j\omega)=K_R \frac{1+j\omega T_N}{j\omega T_N}$}\qquad
 		\fbox{$arg(G(j\omega))=\arctan(\omega T_N)-\frac{\pi}{2}$}\qquad
 		\fbox{$|G(j\omega)| = \frac{K_R \sqrt{1+(\omega T_n)^2}}{T_n \omega}$}
@@ -55,7 +55,7 @@
 	Das PD-Glied entspricht dem inversen PT$_1$-Glied.
 	
 	\subsection{Empirische Einstellregeln \formelbuch{188}}
-		\includegraphics[width=13cm]{./bilder/Empirisch_Regeln.jpg}
+		\includegraphics[width=13cm]{./images/Empirisch_Regeln.jpg}
 		\begin{minipage}[b]{5cm}
         UTF des angenäherten Modells:\\ \\
 		$G_0(j\omega)=\frac{K_s}{1+j\omega T_g}e^{-j\omega T_u}$
