--- a/sections/GegenkopplungStabilitaet.tex
+++ b/sections/GegenkopplungStabilitaet.tex
@@ -10,7 +10,7 @@
         	
         	
         	%P-Glied
-        	P & \parbox[c][2cm]{3cm}{\input{./tikzBilder/PGlied}}
+        	P & \parbox[c][2cm]{3cm}{\input{./tikz/PGlied}}
 			&
 			\begin{tabular}{lll}
 				$y = Ku$ 		& 							& \\
@@ -20,14 +20,14 @@
 			\\ \cline{2-3}
 			& 
 			& 
-			\parbox[c]{3cm}{\input{./tikzBilder/PGliedNyquist}} \quad
-			\parbox[c]{6cm}{\input{./tikzBilder/PGliedBode}}			 
+			\parbox[c]{3cm}{\input{./tikz/PGliedNyquist}} \quad
+			\parbox[c]{6cm}{\input{./tikz/PGliedBode}}			 
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
 			
 			
 			%I-Glied
-			I & \parbox[c][2cm]{3cm}{\input{./tikzBilder/IGlied}}
+			I & \parbox[c][2cm]{3cm}{\input{./tikz/IGlied}}
 			&
 			\begin{tabular}{lll}
 				$\dot{y} = Ku$ 					& 										& \\
@@ -37,14 +37,14 @@
 			\\ \cline{2-3}
 			& 
 			&
-			\parbox[c]{3cm}{\input{./tikzBilder/IGliedNyquist}}
-			\parbox[c]{6cm}{\input{./tikzBilder/IGliedBode}} 
+			\parbox[c]{3cm}{\input{./tikz/IGliedNyquist}}
+			\parbox[c]{6cm}{\input{./tikz/IGliedBode}} 
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
 			
 			
 			%D-Glied
-			D & \parbox[c][2cm]{3cm}{\input{./tikzBilder/DGlied}}
+			D & \parbox[c][2cm]{3cm}{\input{./tikz/DGlied}}
 			&
 			\begin{tabular}{lll}
 				$y = K\dot{u}$					&										& \\
@@ -54,14 +54,14 @@
 			\\ \cline{2-3}
 			&			
 			&
-			\parbox[c]{3cm}{\input{./tikzBilder/DGliedNyquist}}
-			\parbox[c]{6cm}{\input{./tikzBilder/DGliedBode}} 
+			\parbox[c]{3cm}{\input{./tikz/DGliedNyquist}}
+			\parbox[c]{6cm}{\input{./tikz/DGliedBode}} 
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
 			
 			
 			%PT1_Glied
-			$PT_1$ & \parbox[c][2cm]{3cm}{\input{./tikzBilder/PT1Glied}}
+			$PT_1$ & \parbox[c][2cm]{3cm}{\input{./tikz/PT1Glied}}
 			&
 			\begin{tabular}{lll}
 				$T\dot{y}+y=Ku$							& $y(0)=0$									& \\
@@ -72,8 +72,8 @@
 			\\ \cline{2-3}
 			&
 			&
-			\parbox[c]{3.7cm}{\input{./tikzBilder/PT1GliedNyquist}}
-			\parbox[c]{6cm}{\input{./tikzBilder/PT1GliedBode}}
+			\parbox[c]{3.7cm}{\input{./tikz/PT1GliedNyquist}}
+			\parbox[c]{6cm}{\input{./tikz/PT1GliedBode}}
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
 			
@@ -81,7 +81,7 @@
 			%PT2_Glied
 			$PT_2$ &
 			\begin{minipage}{3cm}
-	        \includegraphics[width=3cm]{./bilder/PT2_glied.jpg}
+	        \includegraphics[width=3cm]{./images/PT2_glied.jpg}
 	        \end{minipage}
 	        &
 	        \begin{tabular}{lll}
@@ -99,10 +99,10 @@
 	        \end{tabular}
 			\\ \cline{2-3}
 			& \begin{minipage}{3cm}
-	        \includegraphics[angle = {-0.3}, width=3cm]{./bilder/PT2_Nyq.jpg}
+	        \includegraphics[angle = {-0.3}, width=3cm]{./images/PT2_Nyq.jpg}
 	        \end{minipage}
 			& \begin{minipage}{12cm}
-	        \includegraphics[angle = {0.2}, width=8cm]{./bilder/PT2_Bode.jpg}
+	        \includegraphics[angle = {0.2}, width=8cm]{./images/PT2_Bode.jpg}
 	        \end{minipage} \rule[-5mm]{0mm}{35mm}
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
@@ -110,7 +110,7 @@
 			
 			%Tt_Glied
 			$T_t$ &
-	        \parbox[c][2cm]{3cm}{\input{./tikzBilder/TtGlied}}
+	        \parbox[c][2cm]{3cm}{\input{./tikz/TtGlied}}
 	        &
 	        \begin{tabular}{lll}
 	        	$y=\begin{cases}
@@ -123,8 +123,8 @@
 			\\ \cline{2-3}
 			&
 			& 
-			\parbox[c]{3cm}{\input{./tikzBilder/TtGliedNyquist}}
-			\parbox[c]{6cm}{\input{./tikzBilder/TtGliedBode}}
+			\parbox[c]{3cm}{\input{./tikz/TtGliedNyquist}}
+			\parbox[c]{6cm}{\input{./tikz/TtGliedBode}}
 	        \\
 			\specialrule{2pt}{0pt}{0pt}
         \end{longtable}
@@ -139,16 +139,16 @@
 %		    \hline
 %	        $P$-Glied & $I$-Glied & $PT_1$-Glied & $T_t$-Glied \\
 %	        \begin{minipage}{3cm}
-%	        \includegraphics[width=3cm]{./bilder/pglied}
+%	        \includegraphics[width=3cm]{./images/pglied}
 %	        \end{minipage} &
 %			\begin{minipage}{3cm}
-%	        \includegraphics[width=3cm]{./bilder/iglied}
+%	        \includegraphics[width=3cm]{./images/iglied}
 %	        \end{minipage} &
 %			\begin{minipage}{4cm}
-%	        \includegraphics[width=3cm]{./bilder/pt1glied}
+%	        \includegraphics[width=3cm]{./images/pt1glied}
 %	        \end{minipage} &
 %			\begin{minipage}{3cm}
-%	        \includegraphics[width=3cm]{./bilder/tglied}
+%	        \includegraphics[width=3cm]{./images/tglied}
 %	        \end{minipage} \\
 %	        \hline
 %	        $y=Ku$ & $\dot{y} = Ku$ & $T\dot{y}+y = Ku$ & $y=u(t-T_t)$ \\
@@ -168,16 +168,16 @@
 %	        \hline
 %	        & & & \\
 %	        \begin{minipage}{3cm}
-%	        \includegraphics[width=2.7cm]{./bilder/fg_pglied}
+%	        \includegraphics[width=2.7cm]{./images/fg_pglied}
 %	        \end{minipage} &
 %			\begin{minipage}{3cm}
-%	        \includegraphics[width=3cm]{./bilder/fg_iglied}
+%	        \includegraphics[width=3cm]{./images/fg_iglied}
 %	        \end{minipage} &
 %			\begin{minipage}{4cm}
-%	        \includegraphics[width=4cm]{./bilder/fg_pt1glied}
+%	        \includegraphics[width=4cm]{./images/fg_pt1glied}
 %	        \end{minipage} &
 %			\begin{minipage}{3cm}
-%	        \includegraphics[width=3cm]{./bilder/fg_tglied}
+%	        \includegraphics[width=3cm]{./images/fg_tglied}
 %	        \end{minipage} \\
 %			& & & \\
 %	        \hline
@@ -214,7 +214,7 @@
 			& $\Phi_{res}$ & Phasenreserve
 		\end{tabular}
 		
-        \includegraphics[width=6.2cm]{./bilder/phasenreserve.png}
+        \includegraphics[width=6.2cm]{./images/phasenreserve.png}
 			
 	\subsection{Sprungantwort und Stabilität \formelbuch{135}}
 		\subsubsection{Stabilitätssatz für ein System 2. Ordnung \formelbuch{137}}
