--- a/sections/Umformungen.tex
+++ b/sections/Umformungen.tex
@@ -1,12 +1,12 @@
 \section{Umformungen}
 	\subsection{Serielle Systeme}
-		\input{tikzBilder/SystemSeriell.tex}
+		\input{tikz/SystemSeriell.tex}
 		$G(s) = G_1(s) \cdot G_2(s)$
 	\subsection{Parallele Systeme}
-		\input{tikzBilder/SystemParallel.tex}
+		\input{tikz/SystemParallel.tex}
 		$G(s) = G_1(s) + G_2(s)$
 	\subsection{Zwei Systeme mit Rückkopplung}
-		\includegraphics[height=3cm]{./bilder/feedback.png}
+		\includegraphics[height=3cm]{./images/feedback.png}
 	\subsection{Komplexeres Beispiel}
-		\input{tikzBilder/SystemKomplex.tex}
+		\input{tikz/SystemKomplex.tex}
 		$G(s) = G_1(s) \cdot \frac{G_2(s)}{1-G_2(s) \cdot G_3(s)} \cdot G_4(s)$
