--- a/sections/Umformungen.tex
+++ b/sections/Umformungen.tex
@@ -1,12 +1,13 @@
 \section{Umformungen}
 	\subsection{Serielle Systeme}
-		\input{tikz/SystemSeriell.tex}
+		\input{tikz/SystemSeriell}
 		$G(s) = G_1(s) \cdot G_2(s)$
 	\subsection{Parallele Systeme}
-		\input{tikz/SystemParallel.tex}
+		\input{tikz/SystemParallel}
 		$G(s) = G_1(s) + G_2(s)$
 	\subsection{Zwei Systeme mit Rückkopplung}
-		\includegraphics[height=3cm]{./images/feedback.png}
+		\input{tikz/SystemRueckkopplung}
+		$G(s) = \frac{G_1(s)}{1 \mp G_1(s) G_2(s)}$ Vorzeichenwechsel!
 	\subsection{Komplexeres Beispiel}
-		\input{tikz/SystemKomplex.tex}
+		\input{tikz/SystemKomplex}
 		$G(s) = G_1(s) \cdot \frac{G_2(s)}{1-G_2(s) \cdot G_3(s)} \cdot G_4(s)$
