was hat das xi da gemacht? geht doch nur um zeta

--- a/sections/PidRegler.tex
+++ b/sections/PidRegler.tex
@@ -26,7 +26,7 @@
 		Optimal bei $\Psi=45$ und $\zeta=\frac{1}{\sqrt{2}}$.
 		Dabei erreicht die Regelgrösse $y$ nach $4.3\%$ Überschwingen rasch den	Endwert.
 		\subsubsection{Berechnung $\zeta$}
-		Aus DGL $\ddot{y}+a_1\dot{y}+a_0 y=\ldots$ folgt $a_1=2\zeta\omega_n$, $a_0=\omega_n^2$ $\Rightarrow \xi=\frac{a_1}{2\sqrt{a_0}}$ \\
+		Aus DGL $\ddot{y}+a_1\dot{y}+a_0 y=\ldots$ folgt $a_1=2\zeta\omega_n$, $a_0=\omega_n^2$ $\Rightarrow \zeta=\frac{a_1}{2\sqrt{a_0}}$ \\
 		Mittels Überschwingweite kann $\zeta$ ebenfalls berechnet werden\\
 		\begin{tabular}{p{3cm}p{3cm}p{6cm}}
 			$\zeta = \frac{1}{\sqrt{1+(\frac{\pi}{c})^2}}$ & $c =ln(\frac{y_m}{y_{\infty}})$ & $y_m$: Überschwingweite
