--- a/sections/Umformungen.tex
+++ b/sections/Umformungen.tex
@@ -6,8 +6,15 @@
 		\input{tikz/SystemParallel}
 		$G(s) = G_1(s) + G_2(s)$
 	\subsection{Zwei Systeme mit Rückkopplung}
-		\input{tikz/SystemRueckkopplung}
+		\begin{multicols}{2}
+		\input{tikz/SystemRueckkopplung}\newline
 		$G(s) = \frac{G_1(s)}{1 \mp G_1(s) G_2(s)}$ Vorzeichenwechsel!
+		\columnbreak
+		
+		\input{tikz/SystemRueckkopplung2}\newline
+		$G(s) = G_1(s) \cdot \frac{1}{1 \pm G_2(s)}$ Vorzeichenwechsel!
+		
+		\end{multicols}
 	\subsection{Komplexeres Beispiel}
 		\input{tikz/SystemKomplex}
 		$G(s) = G_1(s) \cdot \frac{G_2(s)}{1-G_2(s) \cdot G_3(s)} \cdot G_4(s)$
