whitespace verkleinert, wind-up entfernt

--- a/RegT2.tex
+++ b/RegT2.tex
@@ -19,6 +19,10 @@
 \usepackage{longtable}
 \usepackage{tikz}
 
+
+\usepackage{enumitem}
+\setlist{noitemsep,topsep=1pt,parsep=1pt,partopsep=1pt}
+
 % Möglichst keine Ergänzungen hier, sondern in header.tex
 \begin{document} 
  
