Aufgeraeumt, viele Bilder geloescht

--- a/RegT2.tex
+++ b/RegT2.tex
@@ -3,7 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\titleinfo}{Regelungstechnik 2 - Formelsammlung}
 \newcommand{\authorinfo}{Braun \& Co., J. Rast}
-\newcommand{\versioninfo}{$Revision: 1044 $}
+\newcommand{\versioninfo}{$Revision: TNT (Total Netter Tunesier) $}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Standard projektübergreifender Header für
