Wenn schon Vorzeichenwechsel, dann richtig ;)

--- a/sections/Umformungen.tex
+++ b/sections/Umformungen.tex
@@ -12,7 +12,7 @@
 		\columnbreak
 		
 		\input{tikz/SystemRueckkopplung2}\newline
-		$G(s) = G_1(s) \cdot \frac{1}{1 \pm G_2(s)}$ Vorzeichenwechsel!
+		$G(s) = G_1(s) \cdot \frac{1}{1 \mp G_2(s)}$ Vorzeichenwechsel!
 		
 		\end{multicols}
 	\subsection{Komplexeres Beispiel}
