tikz PT2 auch verwenden :)

--- a/sections/GegenkopplungStabilitaet.tex
+++ b/sections/GegenkopplungStabilitaet.tex
@@ -81,7 +81,7 @@
 			%PT2_Glied
 			$PT_2$ &
 			\begin{minipage}{3cm}
-	        \includegraphics[width=3cm]{./images/PT2_glied.jpg}
+				\input{./tikz/PT2Glied}
 	        \end{minipage}
 	        &
 	        \begin{tabular}{lll}
