Contributors, Lizenz, Dozent, Semester hinzugefügt

--- a/RegT2.tex
+++ b/RegT2.tex
@@ -2,8 +2,8 @@
 % Dokumentinformationen %
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\titleinfo}{Regelungstechnik 2 - Formelsammlung}
-\newcommand{\authorinfo}{Braun \& Co., J. Rast}
-\newcommand{\versioninfo}{$Revision: TNT (Total Netter Tunesier) $}
+\newcommand{\authorinfo}{Braun \& Co., J. Rast, K\"orner, Gwerder}
+\newcommand{\versioninfo}{$Revision: 2.0 $ - gem\"ass Unterricht Markus Kottmann/FS2013}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Standard projektübergreifender Header für
