Fehler bei Phasenreserve und Verstärkungsreserve behoben: K_{RPi} != 1/G(j\omega pi) sondern K_{Rres}, siehe Buch S. 131/132.

--- a/sections/GegenkopplungStabilitaet.tex
+++ b/sections/GegenkopplungStabilitaet.tex
@@ -207,7 +207,7 @@
 		\begin{tabular}{l|ll}
 			$K_RK_{Rres}=K_{R\pi}$ & $K_R$ & Reglerverstärkung ($K_R < K_{R\pi} \rightarrow$ Regelung stabil, $K_R > K_{R\pi} \rightarrow$ Regelung
 			instabil	) \\
-			$K_{R\pi}=\frac{1}{\left| G(j\omega_{\pi})\right|}$ & $K_{Rres}$ & 	Verstärkungsreserve mit Regler (Amplitudenres., gain margin) \\
+			$K_{Rres}=\frac{1}{\left| G(j\omega_{\pi})\right|}$ & $K_{Rres}$ & 	Verstärkungsreserve mit Regler (Amplitudenres., gain margin) \\
 			$argG_0=-\pi+\Phi_{res}$ & $K_{R\pi}$ & kritische Verstärkung (Verstärkung ohne	Regler) \\
 			$argG_0(\omega_\pi)=-\pi$ & $\omega_\pi$ & Phasenschnittfrequenz\\
 			$|G_0(j\omega_D)|=1$ & $\omega_D$ & Durchtrittsfrequenz \\
